--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400;500;600;700;800&display=swap');
+
 body {
+  font-family: 'Wix Madefor Display', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --main-color: #344042;
+  --secondary-color: #bcded7;
+  --main-color-hover: #516468;
+  --secondary-color-hover: #d7fff7;
+}
+
+.word_emphasy {
+  color: #ffff;
 }
