--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -58,7 +58,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 4.5rem;
+    /* margin-left: 4.5rem; */
     margin-top: 0.5rem;
   }
   
