--- a/src/pages/what-we-do/whatwedo.css
+++ b/src/pages/what-we-do/whatwedo.css
@@ -29,3 +29,68 @@
 .whatwedo_hero_sectionTwo p {
     padding: 0rem 2rem;
 }
+
+.directors_wrapper {
+    display: flex;
+    justify-content: center;
+    margin: 8rem 0rem 0rem 0rem;
+}
+/*Magic card*/
+.director_card {
+    width: 690px;
+    height: 520px;
+    background: var(--main-color-hover);
+    overflow: visible;
+    box-shadow: 0 5px 20px 2px rgba(0,0,0,0.1);
+    
+    margin: 0rem 2rem;
+   }
+
+   .director_data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateY(-18%);
+   }
+   
+   .director_card-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* gap: 2em; */
+    padding: 3rem 2rem 2rem 2rem;
+    margin: 0;
+   }
+   
+   .director_card-img {
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    position: relative;
+    transition: all .3s ease-in-out;
+    object-fit: cover;
+   }
+   
+   /*Text*/
+   .director_text-title {
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    color: var(--secondary-color);
+    letter-spacing: 0.05rem;
+    font-weight: 700;
+   }
+   
+   .director_text-body {
+    font-size: 1rem;
+    text-align: center;
+    color: #6f6d78;
+    font-weight: 400;
+    font-style: italic;
+    color: var(--secondary-color);
+   }
+   
+   /*Hover*/
+   .director_card:hover .director_card-img {
+    width: 12rem;
+    height: 12rem;
+   }
